# Seifun

./: .deployment-trigger  .env.example  .env.local-deployed  .env.production  .env.testnet  .gitignore  ADVANCED_AI_AGENT_ROADMAP.md  AI_ENHANCEMENTS_SUMMARY.md  AI_SETUP_GUIDE.md  AI_TRANSFER_TEST_GUIDE.md  ALL_ISSUES_FIXED_SUMMARY.md  BUILD_TIMESTAMP.txt  COMPLETE_DEPLOYMENT.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_SETUP_COMPLETE.md  CONTRACT_DEPLOYMENT.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_DEVELOPMENT.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_FACTORY_GUIDE.md  DEPLOY_INSTRUCTIONS.md  ENVIRONMENT_CONFIG.md  FINAL_STATUS_REPORT.md  FIXED_SEILOR_TEST.md  FRONTEND_BACKEND_ANALYSIS.md  FRONTEND_INTEGRATION_FIX.md  FS_ERROR_FIXED.md  GET_TESTNET_TOKENS.md  HAMBURGER_DEPLOYMENT_GUIDE.md  INSTANT_NETLIFY_DEPLOY.md  MANUAL_TESTING_GUIDE.md  MOBILE_DEPLOYMENT_GUIDE.md  NETLIFY_BUILD_FIXED.md  NETLIFY_CLI_DEPLOY.md  (+60 more)
assets/: index-BMJajAzr.js  index-DmqALe35.css
backend/: eventMonitor.js  index.cjs
contracts/: SeiCosmWasmContracts.rs  SimpleTokenFactory.sol  TokenCheckerFactory.sol  TokenSafeChecker.sol
contracts/native/router-helper/: Cargo.toml
contracts/native/router-helper/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/native/token-analyzer/: Cargo.toml  Makefile  deploy.sh
contracts/native/token-analyzer/src/: lib.rs  msg.rs  state.rs
deployment/: TESTNET_SUCCESS.md  ai-services-status.json  (+3 more)
(+248 files in other folders)
