[package]
name = "router-helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.4", features = ["staking"] }
cosmwasm-storage = "1.2"
cw-storage-plus = "1.1"
cw-utils = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.4"
cw-multi-test = "0.16"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true