[package]
name = "token-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-storage = "1.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
cw-storage-plus = "1.1"
cw-utils = "1.1"

[dev-dependencies]
cosmwasm-schema = "1.5"